# stellar-whisk-profiler

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
backend/: __init__.py  cli.py  collector.py  metrics.py  profiler.py  sampler.py
contracts/: __init__.py  collector.py  metrics.py  profiler.py
docs/: architecture.md
examples/: stellar_profiling.py  structured_example.py
frontend/: __init__.py  app.py  routes.py
frontend/templates/: index.html
stellar/: __init__.py
stellar/whisk/: __init__.py
stellar_whisk_profiler/: __init__.py  cli.py
tests/: test_stellar_profiler.py
