[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-whisk-profiler"
version = "0.1.0"
description = "A comprehensive infrastructure for profiling parallelism in Stellar blockchain applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stellar Whisk Team", email = "team@stellar-whisk.org"}
]
maintainers = [
    {name = "Stellar Whisk Team", email = "team@stellar-whisk.org"}
]
keywords = ["profiling", "parallelism", "performance", "stellar", "blockchain", "monitoring", "concurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "redis>=3.5.0",
    "psutil>=5.8.0",
    "py-spy>=0.3.0",
    "memory-profiler>=0.58.0",
    "line-profiler>=3.3.0",
    "cython>=0.29.0",
    "setuptools>=57.0.0",
    "stellar-sdk>=8.0.0",
    "stellar-base>=3.0.0",
    "soroban-cli>=0.8.0",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.0.0",
    "cupy>=9.0.0",
]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "watchdog>=2.1.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "myst-parser>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/stellar/stellar-whisk-profiler"
Documentation = "https://stellar-whisk-profiler.readthedocs.io/"
Repository = "https://github.com/stellar/stellar-whisk-profiler.git"
"Bug Tracker" = "https://github.com/stellar/stellar-whisk-profiler/issues"
"Stellar Website" = "https://www.stellar.org/"

[project.scripts]
stellar-whisk-profiler = "stellar.whisk.cli:main"
stellar-whisk-dashboard = "stellar.whisk.dashboard:main"

[tool.setuptools]
packages = ["stellar", "stellar.whisk", "stellar.whisk.core", "stellar.whisk.dashboard", "stellar.stellar"]

[tool.setuptools.package-data]
stellar = ["whisk/dashboard/static/*", "whisk/dashboard/templates/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["stellar"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "plotly.*",
    "pynvml.*",
    "stellar_sdk.*",
    "stellar_base.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "stellar: marks tests that require Stellar SDK",
]

[tool.coverage.run]
source = ["stellar"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
